test/compilable/imports/test7327c.d
void foo(short) {}
void bar(short) {}
void baz(short) {}
void buz(short, short) {}
