test/fail_compilation/fail191.d

void foo(scope ref int x) { }
